--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1,9 +1,9 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
+* 1. Set default font family to sans-serif.
+* 2. Prevent iOS text size adjust after orientation change, without disabling
+*    user zoom.
+*/
 html {
   font-family: sans-serif;
   /* 1 */
@@ -14,21 +14,21 @@ html {
 }
 
 /**
- * Remove default margin.
- */
+* Remove default margin.
+*/
 body {
   margin: 0;
   line-height: 1.5em !important;
 }
 
 /* HTML5 display definitions
-   ========================================================================== */
+========================================================================== */
 /**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
+* Correct `block` display not defined for any HTML5 element in IE 8/9.
+* Correct `block` display not defined for `details` or `summary` in IE 10/11
+* and Firefox.
+* Correct `block` display not defined for `main` in IE 11.
+*/
 article,
 aside,
 details,
@@ -46,9 +46,9 @@ summary {
 }
 
 /**
- * 1. Correct `inline-block` display not defined in IE 8/9.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
+* 1. Correct `inline-block` display not defined in IE 8/9.
+* 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+*/
 audio,
 canvas,
 progress,
@@ -60,95 +60,95 @@ video {
 }
 
 /**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
+* Prevent modern browsers from displaying `audio` without controls.
+* Remove excess height in iOS 5 devices.
+*/
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
 /**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
- */
+* Address `[hidden]` styling not present in IE 8/9/10.
+* Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+*/
 [hidden],
 template {
   display: none;
 }
 
 /* Links
-   ========================================================================== */
+========================================================================== */
 /**
- * Remove the gray background color from active links in IE 10.
- */
+* Remove the gray background color from active links in IE 10.
+*/
 a {
   background-color: transparent;
 }
 
 /**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
+* Improve readability when focused and also mouse hovered in all browsers.
+*/
 a:active,
 a:hover {
   outline: 0;
 }
 
 /* Text-level semantics
-   ========================================================================== */
+========================================================================== */
 /**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
- */
+* Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+*/
 abbr[title] {
   border-bottom: 1px dotted;
 }
 
 /**
- * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
- */
+* Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+*/
 b,
 strong {
   font-weight: bold;
 }
 
 #item-type-edition {
- color: red;
+  color: red;
 }
 
 /**
- * Address styling not present in Safari and Chrome.
- */
+* Address styling not present in Safari and Chrome.
+*/
 dfn {
   font-style: italic;
 }
 
 /**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
- */
+* Address variable `h1` font-size and margin within `section` and `article`
+* contexts in Firefox 4+, Safari, and Chrome.
+*/
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
 /**
- * Address styling not present in IE 8/9.
- */
+* Address styling not present in IE 8/9.
+*/
 mark {
   background: #ff0;
   color: #000;
 }
 
 /**
- * Address inconsistent and variable font size in all browsers.
- */
+* Address inconsistent and variable font size in all browsers.
+*/
 small {
   font-size: 80%;
 }
 
 /**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
+* Prevent `sub` and `sup` affecting `line-height` in all browsers.
+*/
 sub,
 sup {
   font-size: 75%;
@@ -166,33 +166,33 @@ sub {
 }
 
 /* Embedded content
-   ========================================================================== */
+========================================================================== */
 /**
- * Remove border when inside `a` element in IE 8/9/10.
- */
+* Remove border when inside `a` element in IE 8/9/10.
+*/
 img {
   border: 0;
 }
 
 /**
- * Correct overflow not hidden in IE 9/10/11.
- */
+* Correct overflow not hidden in IE 9/10/11.
+*/
 svg:not(:root) {
   overflow: hidden;
 }
 
 /* Grouping content
-   ========================================================================== */
+========================================================================== */
 /**
- * Address margin not present in IE 8/9 and Safari.
- */
+* Address margin not present in IE 8/9 and Safari.
+*/
 figure {
   margin: 1em 40px;
 }
 
 /**
- * Address differences between Firefox and other browsers.
- */
+* Address differences between Firefox and other browsers.
+*/
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -200,15 +200,15 @@ hr {
 }
 
 /**
- * Contain overflow in all browsers.
- */
+* Contain overflow in all browsers.
+*/
 pre {
   overflow: auto;
 }
 
 /**
- * Address odd `em`-unit font size rendering in all browsers.
- */
+* Address odd `em`-unit font size rendering in all browsers.
+*/
 code,
 kbd,
 pre,
@@ -218,19 +218,19 @@ samp {
 }
 
 /* Forms
-   ========================================================================== */
+========================================================================== */
 /**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
- * styling of `select`, unless a `border` property is set.
- */
+* Known limitation: by default, Chrome and Safari on OS X allow very limited
+* styling of `select`, unless a `border` property is set.
+*/
 /**
 
 Elias Lönnrot.
- * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled elements.
- * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
- */
+* 1. Correct color not being inherited.
+*    Known issue: affects color of disabled elements.
+* 2. Correct font properties not being inherited.
+* 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+*/
 button,
 input,
 optgroup,
@@ -245,30 +245,30 @@ textarea {
 }
 
 /**
- * Address `overflow` set to `hidden` in IE 8/9/10/11.
- */
+* Address `overflow` set to `hidden` in IE 8/9/10/11.
+*/
 button {
   overflow: visible;
 }
 
 /**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
- * Correct `select` style inheritance in Firefox.
- */
+* Address inconsistent `text-transform` inheritance for `button` and `select`.
+* All other form control elements do not inherit `text-transform` values.
+* Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+* Correct `select` style inheritance in Firefox.
+*/
 button,
 select {
   text-transform: none;
 }
 
 /**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
+* 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+*    and `video` controls.
+* 2. Correct inability to style clickable `input` types in iOS.
+* 3. Improve usability and consistency of cursor style between image-type
+*    `input` and others.
+*/
 button,
 html input[type="button"],
 input[type="reset"],
@@ -280,16 +280,16 @@ input[type="submit"] {
 }
 
 /**
- * Re-set default cursor for disabled elements.
- */
+* Re-set default cursor for disabled elements.
+*/
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
 
 /**
- * Remove inner padding and border in Firefox 4+.
- */
+* Remove inner padding and border in Firefox 4+.
+*/
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -297,20 +297,20 @@ input::-moz-focus-inner {
 }
 
 /**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
+* Address Firefox 4+ setting `line-height` on `input` using `!important` in
+* the UA stylesheet.
+*/
 input {
   line-height: normal;
 }
 
 /**
- * It's recommended that you don't attempt to style these elements.
- * Firefox's implementation doesn't respect box-sizing, padding, or width.
- *
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10.
- */
+* It's recommended that you don't attempt to style these elements.
+* Firefox's implementation doesn't respect box-sizing, padding, or width.
+*
+* 1. Address box sizing set to `content-box` in IE 8/9/10.
+* 2. Remove excess padding in IE 8/9/10.
+*/
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
@@ -320,20 +320,20 @@ input[type="radio"] {
 }
 
 /**
- * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `font-size` values of the `input`, it causes the cursor style of the
- * decrement button to change from `default` to `text`.
- */
+* Fix the cursor style for Chrome's increment/decrement buttons. For certain
+* `font-size` values of the `input`, it causes the cursor style of the
+* decrement button to change from `default` to `text`.
+*/
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
 /**
- * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
- *    (include `-moz` to future-proof).
- */
+* 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+* 2. Address `box-sizing` set to `border-box` in Safari and Chrome
+*    (include `-moz` to future-proof).
+*/
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -344,18 +344,18 @@ input[type="search"] {
 }
 
 /**
- * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
- * padding (and `textfield` appearance).
- */
+* Remove inner padding and search cancel button in Safari and Chrome on OS X.
+* Safari (but not Chrome) clips the cancel button when the search input has
+* padding (and `textfield` appearance).
+*/
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
 /**
- * Define consistent border, margin, and padding.
- */
+* Define consistent border, margin, and padding.
+*/
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
@@ -363,9 +363,9 @@ fieldset {
 }
 
 /**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
+* 1. Correct `color` not being inherited in IE 8/9/10/11.
+* 2. Remove padding so people aren't caught out if they zero out fieldsets.
+*/
 legend {
   border: 0;
   /* 1 */
@@ -374,25 +374,25 @@ legend {
 }
 
 /**
- * Remove default vertical scrollbar in IE 8/9/10/11.
- */
+* Remove default vertical scrollbar in IE 8/9/10/11.
+*/
 textarea {
   overflow: auto;
 }
 
 /**
- * Don't inherit the `font-weight` (applied by a rule above).
- * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
- */
+* Don't inherit the `font-weight` (applied by a rule above).
+* NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
+*/
 optgroup {
   font-weight: bold;
 }
 
 /* Tables
-   ========================================================================== */
+========================================================================== */
 /**
- * Remove most spacing between table cells.
- */
+* Remove most spacing between table cells.
+*/
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -609,8 +609,8 @@ th {
   }
 
   /*
-    Added via JS to <textarea> and class="input_full".
-    Applies only to IE7. Other browsers don't need it.
+  Added via JS to <textarea> and class="input_full".
+  Applies only to IE7. Other browsers don't need it.
   */
   .input_full_wrap {
     display: block;
@@ -735,8 +735,8 @@ th {
     padding: 2px 10px;
     font-size: 16px;
     /*
-      Leaving out Helvetica Neue, to not throw off size="..."
-      on inputs. Arial is more reliable, on Windows and OS X.
+    Leaving out Helvetica Neue, to not throw off size="..."
+    on inputs. Arial is more reliable, on Windows and OS X.
     */
     font-family: "PT Serif", serif;
     height: 1.8em;
@@ -747,9 +747,9 @@ th {
   }
 
   /*
-    Separate rule for Firefox.
-    Separate rule for IE, too.
-    Cannot stack with WebKit's.
+  Separate rule for Firefox.
+  Separate rule for IE, too.
+  Cannot stack with WebKit's.
   */
   ::-webkit-input-placeholder {
     color: #888;
@@ -767,9 +767,9 @@ th {
 
   :invalid {
     /*
-      Suppress red glow that Firefox
-      adds to form fields by default,
-      even when user is still typing.
+    Suppress red glow that Firefox
+    adds to form fields by default,
+    even when user is still typing.
     */
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
@@ -968,7 +968,7 @@ th {
     margin-bottom: 0;
   }
   /*#advanced-search-form .field .remove_search {
-    margin: 1.5em 0 0;
+  margin: 1.5em 0 0;
   }*/
 
   ul.items-list, ul.collections-list, ul.title-list {
@@ -1723,11 +1723,11 @@ th {
   }
 
   .element-text {
-     text-align:left;
-     margin-left:1em;
-     font-size:12px;
-     margin-bottom: 1em;
-     font-family: sans-serif;
+    text-align:left;
+    margin-left:1em;
+    font-size:12px;
+    margin-bottom: 1em;
+    font-family: sans-serif;
   }
 
   #outputs {
@@ -2296,15 +2296,15 @@ th {
     line-height: 10px;
   }
   /*#advanced-search-form .field .remove_search:after {
-    content: "\f00d";
-    font-family: "FontAwesome";
-    text-indent: 0;
-    text-align: center;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    line-height: 30px;
+  content: "\f00d";
+  font-family: "FontAwesome";
+  text-indent: 0;
+  text-align: center;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  line-height: 30px;
   }*/
 
   /* @end */
@@ -2371,10 +2371,10 @@ th {
   }
 
   #exhibit2a {
-   height: 800px;
-   width: 59%;
-   margin-right: 10px;
-   float:left;
+    height: 800px;
+    width: 59%;
+    margin-right: 10px;
+    float:left;
   }
 
   #buttons {
@@ -2386,15 +2386,15 @@ th {
   }
 
   #picframe {
-   overflow: hidden;
-   height: 100%;
-   width: 100%;
-   float:left;
-   padding: 1em;
-   border: 3px solid #ccc;
-   border-radius: 5px;
-   text-align: center;
-   background-color: #333333;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    float:left;
+    padding: 1em;
+    border: 3px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+    background-color: #333333;
   }
 
   .fullscreen {
@@ -2405,7 +2405,7 @@ th {
     width: 100% !important;
     height: 100% !important;
     background-color: #fdfdfd;
-   }
+  }
 
   .pic {
     max-height: 100%;
@@ -2557,50 +2557,73 @@ th {
     background:#fffAF0;
   }
 
- .callout {
+  .callout {
     z-index:20;
     position:absolute;
     top:30px;
     border:0;
     left:-12px;
- }
+  }
 
- #elementTitle {
+  #elementTitle {
     text-transform:uppercase;
     float:left;
     margin-left:1em;
     font-size:12px;
     font-family: sans-serif;
     color:#9a9a9a;
- }
+  }
 
-/*CSS3 extras*/
- a.tooltip span
- {
+  /*CSS3 extras*/
+  a.tooltip span
+  {
     border-radius:4px;
     box-shadow: 5px 5px 8px #CCC;
- }
+  }
 
- p#opener {
+  p#opener {
     display: none !important;
- }
+  }
 
- #frontpage-nav ul {
-   list-style-type: none;
-   padding-bottom: 10px !important;
-   overflow: hidden;
-   float: right !important;
-   margin-bottom: 1.5em;
- }
+  #frontpage-nav ul {
+    list-style-type: none;
+    padding-bottom: 10px !important;
+    overflow: hidden;
+    float: right !important;
+    margin-bottom: 1.5em;
+  }
 
- #frontpage-nav li {
-   display: inline;
-   margin-right: 5%;
-   font-size:20px;
-   float: right;
- }
+  #frontpage-nav li {
+    display: inline;
+    margin-right: 5%;
+    font-size:20px;
+    float: right;
+  }
 
-.
+  #collections-list {
+    display: none;
+    z-index: 9999;
+    position: fixed;
+    top: 18%;
+    left: 18%;
+    border-radius: 2px;
+    background-color: #e9e3f9;
+    width: auto;
+  }
+
+  #collections-list ul {
+    list-style-type: none;
+    padding: 10px; 
+    margin: 2px;
+  }
+
+  #collections-list ul li {
+    font-size: 16px;
+    line-height: 35px;
+  }
+
+
+  .
 
   /* @end */
 }
