--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1545,7 +1545,7 @@ th {
 @media screen {
   #search-container {
     position: relative;
-    -webkit-box-sizing: border-box;
+    *-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     *behavior: url("../javascripts/boxsizing.htc");
@@ -1591,7 +1591,7 @@ th {
   #search-container {
     position: relative;
     width: 100%;
-    margin-bottom: 0;
+    margin-top: 3em;
   }
 
   #search-container a {
@@ -1599,6 +1599,7 @@ th {
     text-decoration: none;
     display: inline-block;
     clear: both;
+    border-bottom: none;
   }
 
   #search-container h2 {
@@ -2106,6 +2107,7 @@ th {
     /*border-style: solid;*/
     background-color: #dfc1c1;
     width: 100%;
+    height: 7.1em;
   }
 
   .menu-button {
@@ -2335,31 +2337,6 @@ th {
     display: inline;
     display: inline-block;
     float: none;
-  }
-
-  /* UV-plugin ja transkriptio, HTML-version */
-
-  .exhibit1 {
-    width:100%;
-    float:left;
-    margin-bottom:60px;
-  }
-
-  .exhibit1a {
-    width:60%;
-    float:left;
-    padding-right:10px;
-  }
-
-  .exhibit1b {
-    overflow-y:scroll;
-    height:773px;
-    width:40%;
-    float:left;
-    border-width:2px;
-    border-style:solid;
-    padding: 3em;
-    text-align: justify;
   }
 
   /* Jquery-image-viewer ja XML-tranksriptio */
@@ -2613,13 +2590,17 @@ th {
 
   #collections-list ul {
     list-style-type: none;
-    padding: 10px; 
+    padding: 10px;
     margin: 2px;
   }
 
   #collections-list ul li {
     font-size: 16px;
     line-height: 35px;
+  }
+
+  #collections-list ul li a {
+    border-bottom: none;
   }
 
 
