--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1742,6 +1742,13 @@ th {
     margin-bottom: 20px;
   }
 
+  #collection-items {
+    height: 650px;
+    overflow: auto;
+    border: 0.5px solid;
+    border-radius: 5px;
+    padding: 1em;
+  }
   #collection-items .item {
     border-bottom: 1px solid #ccc;
     padding: 20px 0;
@@ -1757,7 +1764,7 @@ th {
 
   .browse .item {
     overflow: hidden;
-    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     padding-top: 1.5em;
     padding-bottom: 1.5em;
   }
@@ -2611,7 +2618,14 @@ th {
     border-bottom: none;
   }
 
-
+  #item-main-list {
+    width: 100%;
+    height: 650px;
+    overflow: auto;
+    padding: 1em;
+    border: 0.5px solid;
+    border-radius: 5px;
+  }
   .
 
   /* @end */
