--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -2595,12 +2595,14 @@ th {
   #collections-list {
     display: none;
     z-index: 9999;
-    position: fixed;
+    position: absolute;
     top: 17%;
     left: 18%;
     border-radius: 2px;
+    border: 0.5px solid;
     background-color: #e9e3f9;
     width: auto;
+    overflow: auto;
   }
 
   #collections-list ul {
