--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -2075,7 +2075,6 @@ th {
     margin-right: 0;
     *margin-left: 0;
     display: inline;
-    padding: 40px 0;
   }
 
   #primary-nav {
@@ -2147,7 +2146,7 @@ th {
   }
 
   .secondary-nav, #secondary-nav {
-    border-bottom: 1px solid #ccc;
+    /*border-bottom: 1px solid #ccc;*/
     font-size: 1.125em;
   }
   .secondary-nav a, #secondary-nav a {
@@ -2624,7 +2623,9 @@ th {
     width: 100%;
     height: 650px;
     overflow: auto;
-    padding: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
     border: 0.5px solid;
     border-radius: 5px;
   }
