--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1484,7 +1484,7 @@ th {
     display: inline-block;
     padding-left: 0;
   }
-  
+
   #sort-links {
     font-size: 0.875em;
     line-height: 1.71429em;
@@ -2282,8 +2282,8 @@ th {
   /* @group ----- Advanced Search Form ----- */
   #advanced-search-form {
     position: absolute;
-    right: 17%;
-    top: 17%;
+    right: 15em;
+    top: 6.8em;
     width: 25%;
     border: solid 0.5px;
     border-radius: 2px;
@@ -2625,6 +2625,40 @@ th {
     cursor: pointer;
     padding-right: 1em;
   }
+
+  #infobtn {
+    margin-left: 16px;
+    font-size: 18px !important;
+    cursor: pointer;
+  }
+
+  #instructions {
+    background-color: #e9e3f9;
+    width: auto;
+    position: absolute;
+    left: 29.5em;
+    top: 6.9em;
+    padding-left: 1em !important;
+    z-index: 9999;
+    opacity: 1;
+    font-size: 16px;
+    border-radius: 2px;
+    border: solid 1px black;
+  }
+
+  #instructions ul {
+    margin: 0;
+    padding: 0.5em;
+  }
+
+  #instructions ul li {
+    line-height: 30px;
+  }
+
+  #markings ul li {
+    margin-bottom: 1em;
+  }
+
   .
 
   /* @end */
