--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -2764,7 +2764,7 @@ th {
   }
 
   #linkit-menu-btn {
-    margin-left: 85px;
+    margin-left: 40px;
     font-size: 18px !important;
     cursor: pointer;
   }
@@ -2773,7 +2773,7 @@ th {
     background-color: #d1eeee;
     width: auto;
     position: absolute;
-    right: 1.8em;
+    right: 16em;
     top: 7em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
@@ -2791,6 +2791,37 @@ th {
   }
 
   #linkit-menu ul li {
+    line-height: 30px;
+  }
+
+  #tiedot-menu-btn {
+    margin-left: 40px;
+    font-size: 18px !important;
+    cursor: pointer;
+  }
+
+  #tiedot-menu {
+    background-color: #d1eeee;
+    width: auto;
+    position: absolute;
+    right: 18em;
+    top: 7em;
+    padding-left: 0.5em !important;
+    padding-right: 0.5em !important;
+    z-index: 9999;
+    opacity: 1;
+    font-size: 16px;
+    border-radius: 2px;
+    border: solid 1px black;
+  }
+
+  #tiedot-menu ul {
+    margin: 0;
+    padding: 0.5em;
+    list-style-type: none;
+  }
+
+  #tiedot-menu ul li {
     line-height: 30px;
   }
 
