--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -2132,7 +2132,7 @@ th {
     /*border-style: solid;*/
     background-color: #699cfa;
     width: 100%;
-    height: 7.3em;
+    height: auto;
   }
 
   .menu-button {
@@ -2403,7 +2403,7 @@ th {
     border: 3px solid #ccc;
     border-radius: 5px;
     text-align: center;
-    background-color: #d1eeee;
+    background-color: #9cb094;
   }
 
   .fullscreen {
@@ -2681,7 +2681,7 @@ th {
     width: auto;
     position: absolute;
     left: 16.1em;
-    top: 7em;
+    top: 8.3em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
     z-index: 9999;
@@ -2712,7 +2712,7 @@ th {
     width: auto;
     position: absolute;
     left: 51.9em;
-    top: 7em;
+    top: 8.3em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
     z-index: 9999;
@@ -2743,7 +2743,7 @@ th {
     width: auto;
     position: absolute;
     left: 27.3em;
-    top: 7em;
+    top: 8.3em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
     z-index: 9999;
@@ -2774,7 +2774,7 @@ th {
     width: auto;
     position: absolute;
     left: 39.1em;
-    top: 7em;
+    top: 8.3em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
     z-index: 9999;
@@ -2805,7 +2805,7 @@ th {
     width: auto;
     position: absolute;
     left: 58em;
-    top: 7em;
+    top: 8.3em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
     z-index: 9999;
@@ -2836,7 +2836,7 @@ th {
     width: auto;
     position: absolute;
     left: 68.9em;
-    top: 7em;
+    top: 8.3em;
     padding-left: 0.5em !important;
     padding-right: 0.5em !important;
     z-index: 9999;
